--- a/source/iterators.tex
+++ b/source/iterators.tex
@@ -647,8 +647,7 @@ is undefined.
 \end{footnote}
 
 \pnum
-\indextext{iterator!constexpr}%
-Iterators are called \defn{constexpr iterators}
+Iterators are called \defnadjx{constexpr}{iterators}{iterator}
 if all operations provided to meet iterator category requirements
 are constexpr functions.
 \begin{note}
@@ -6175,7 +6174,7 @@ ostream_iterator& operator++(int);
 The
 class template
 \tcode{istreambuf_iterator}
-defines an input iterator\iref{input.iterators} that
+defines an \link{input iterator}{input.iterators} that
 reads successive
 \textit{characters}
 from the streambuf for which it was constructed.
@@ -6299,7 +6298,6 @@ constexpr istreambuf_iterator(default_sentinel_t) noexcept;
 Initializes \tcode{sbuf_} with \keyword{nullptr}.
 \end{itemdescr}
 
-
 \indexlibraryctor{istreambuf_iterator}%
 \begin{itemdecl}
 istreambuf_iterator(istream_type& s) noexcept;
@@ -6311,7 +6309,6 @@ istreambuf_iterator(istream_type& s) noexcept;
 Initializes \tcode{sbuf_} with \tcode{s.rdbuf()}.
 \end{itemdescr}
 
-
 \indexlibraryctor{istreambuf_iterator}%
 \begin{itemdecl}
 istreambuf_iterator(streambuf_type* s) noexcept;
@@ -6322,7 +6319,6 @@ istreambuf_iterator(streambuf_type* s) noexcept;
 \effects
 Initializes \tcode{sbuf_} with \tcode{s}.
 \end{itemdescr}
-
 
 \indexlibraryctor{istreambuf_iterator}%
 \begin{itemdecl}
@@ -6473,7 +6469,6 @@ is not a null pointer.
 \effects
 Initializes \tcode{sbuf_} with \tcode{s.rdbuf()}.
 \end{itemdescr}
-
 
 \indexlibraryctor{ostreambuf_iterator}%
 \begin{itemdecl}
