--- a/source/limits.tex
+++ b/source/limits.tex
@@ -129,6 +129,6 @@ during template argument deduction\iref{temp.deduct} [1\,024].
 \item%
 Handlers per try block\iref{except.handle} [256].
 \item%
-Number of placeholders\iref{func.bind.place} [10].
+Number of \link{placeholders}{func.bind.place} [10].
 
 \end{itemize}
