--- a/source/lex.tex
+++ b/source/lex.tex
@@ -1959,8 +1959,8 @@ what effect these sequences have on encoding state.
 \indextext{literal!boolean}%
 \begin{bnf}
 \nontermdef{boolean-literal}\br
-    \terminal{false}\br
-    \terminal{true}
+    \keyword{false}\br
+    \keyword{true}
 \end{bnf}
 
 \pnum
@@ -1973,7 +1973,7 @@ Such literals are prvalues and have type \tcode{bool}.
 \indextext{literal!pointer}%
 \begin{bnf}
 \nontermdef{pointer-literal}\br
-    \terminal{nullptr}
+    \keyword{nullptr}
 \end{bnf}
 
 \pnum
