--- a/source/preprocessor.tex
+++ b/source/preprocessor.tex
@@ -275,10 +275,9 @@ has been replaced.
 \indextext{preprocessing directive!conditional inclusion}%
 \indextext{inclusion!conditional|see{preprocessing directive, conditional inclusion}}
 
-\indextext{\idxcode{defined}}%
 \begin{bnf}
 \nontermdef{defined-macro-expression}\br
-    \terminal{defined} identifier\br
+    \keyword{defined} identifier\br
     \terminal{defined (} identifier \terminal{)}
 \end{bnf}
 
