[class.pre] Index definition of 'unnamed class'.

--- a/source/classes.tex
+++ b/source/classes.tex
@@ -63,7 +63,7 @@ shall be an explicit specialization\iref{temp.expl.spec} or
 a partial specialization\iref{temp.spec.partial}.
 A \grammarterm{class-specifier} whose
 \grammarterm{class-head} omits the
-\grammarterm{class-head-name} defines an unnamed class.
+\grammarterm{class-head-name} defines an \defnadj{unnamed}{class}.
 \begin{note}
 An unnamed class thus can't
 be \tcode{final}.
