--- a/source/basic.tex
+++ b/source/basic.tex
@@ -4715,6 +4715,9 @@ array types, and cv-qualified versions of these types
 are collectively called \defnadjx{implicit-lifetime}{types}{type}.
 
 \pnum
+A \defn{reference surrogate type} is a class type with at least a dot access function.
+
+\pnum
 \label{term.literal.type}%
 A type is a \defnadj{literal}{type} if it is:
 \begin{itemize}
