--- a/source/intro.tex
+++ b/source/intro.tex
@@ -578,6 +578,7 @@ If a \Cpp{} program provides a definition for any reserved function, the results
 \definition{signature}{defns.signature}
 \defncontext{function}
 name,
+return type if class member access function,
 parameter-type-list,
 and enclosing namespace
 
